--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
       "import": "./dist/index.js",
       "default": "./dist/index.js"
     },
+    "./component": {
+      "types": "./dist/component.d.ts",
+      "import": "./dist/component.js",
+      "default": "./dist/component.js"
+    },
     "./pkg/*": "./pkg/*"
   },
   "files": [
@@ -27,6 +32,7 @@
     "test": "cargo test",
     "test:wasm": "wasm-pack test --headless --chrome",
     "test:js": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:e2e": "npx playwright test",
     "typecheck": "tsc -p js/tsconfig.json --noEmit",
     "lint": "cargo clippy -- -D warnings",
     "clean": "cargo clean && rm -rf pkg pkg-node dist"
@@ -50,10 +56,13 @@
   },
   "homepage": "https://github.com/Gilbetrar/anki-renderer#readme",
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "typescript": "^5.3.0",
-    "jest": "^29.7.0",
+    "@playwright/test": "^1.57.0",
     "@types/jest": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "@types/node": "^20.11.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "serve": "^14.2.5",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.3.0"
   }
 }
