feat: add demo site and documentation
Creates a Vite-based demo site with:
- Live template editor with real-time preview
- Example cards (basic, cloze, hint, furigana, styled, filters)
- API documentation with code examples
- Night mode and custom CSS support
- GitHub Actions workflow for deployment to GitHub Pages

Part of #9

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ node_modules/
 # TypeScript build output
 /dist/
 
+# Demo build output
+/demo/dist/
+
 # IDE
 .idea/
 .vscode/
@@ -26,3 +29,4 @@ node_modules/
 # OS
 .DS_Store
 Thumbs.db
+SIGNAL.txt
