--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 wasm-bindgen = "0.2"
 nom = "7"
+nom_locate = "4"
 regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
