feat: prepare package for NPM publication
- Add .npmignore to include pkg/ and pkg-node/ in published package
- Add postbuild script to transform import paths for dist/
- Update package.json with prepublishOnly hook
- Fix WASM import paths to work when package is installed

Part of #10

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "build:wasm": "wasm-pack build --target web --out-dir pkg",
     "build:wasm:node": "wasm-pack build --target nodejs --out-dir pkg-node",
     "build:ts": "tsc -p js/tsconfig.json",
-    "build": "npm run build:wasm && npm run build:wasm:node && npm run build:ts",
+    "build": "npm run build:wasm && npm run build:wasm:node && npm run build:ts && npm run postbuild",
+    "postbuild": "node scripts/postbuild.js",
+    "prepublishOnly": "npm run build",
     "test": "cargo test",
     "test:wasm": "wasm-pack test --headless --chrome",
     "test:js": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
